docs-archive/apache-airflow-providers-google/22.9.0/_sources/_api/tests/system/google/cloud/gcs/example_gdrive_to_gcs/index.rst.txt
tests.system.google.cloud.gcs.example_gdrive_to_gcs
===================================================

.. py:module:: tests.system.google.cloud.gcs.example_gdrive_to_gcs


Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gdrive_to_gcs.ENV_ID
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.PROJECT_ID
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.DAG_ID
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.IS_COMPOSER
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.RESOURCES_BUCKET_NAME
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.BUCKET_NAME
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.CONNECTION_ID
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.OBJECT
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.FILE_NAME
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.DRIVE_FILE_NAME
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.LOCAL_PATH
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.GDRIVE_SECRET_ID
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.log
   tests.system.google.cloud.gcs.example_gdrive_to_gcs.test_run


Functions
---------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_gdrive_to_gcs.get_shared_drive_id


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'gdrive_to_gcs_with_gdrive_sensor'


.. py:data:: IS_COMPOSER

.. py:data:: RESOURCES_BUCKET_NAME
   :value: 'airflow-system-tests-resources'


.. py:data:: BUCKET_NAME

.. py:data:: CONNECTION_ID

.. py:data:: OBJECT
   :value: 'abc123xyz'


.. py:data:: FILE_NAME
   :value: 'example_upload.txt'


.. py:data:: DRIVE_FILE_NAME

.. py:data:: LOCAL_PATH
   :value: 'gcs/example_upload.txt'


.. py:data:: GDRIVE_SECRET_ID
   :value: 'gdrive_shared_folder_id'


.. py:data:: log

.. py:function:: get_shared_drive_id()

.. py:data:: test_run

